[package]
name = "recyclebin_parser"
version = "0.1.0"
edition = "2021"
description = "Parser for Recycle Bin $I files"
homepage = "https://github.com/AbdulRhmanAlfaifi/RecycleBinParser-rs"
repository = "https://github.com/AbdulRhmanAlfaifi/RecycleBinParser-rs"
authors = ["AbdulRhman Alfaifi <@A__ALFAIFI>"]
license = "MIT"

[[bin]]
name = "recyclebin_parser"
path = "src/bin/main.rs"

[dependencies]
winparsingtools = "1.1.0"
byteorder = "1.4.3"
serde = "1.0.137"
serde_json = "1.0.81"
glob = "0.3.0"
clap = "3.2.6"
